# platypus

./: CMakeLists.txt  README.md  README.txt
exe/: mainCradleRemoval.cpp  mainDemo.cpp  mainTextureRemoval.cpp
gui/: CMakeLists.txt  main.cpp
gui/include/platypus_gui/: CradleProgressCallbacks.hpp  ImageWidget.hpp  MainWindow.hpp  Polygon.hpp  utils.hpp
gui/src/: CradleProgressCallbacks.cpp  ImageWidget.cpp  MainWindow.cpp  Polygon.cpp
include/platypus/: CradleFunctions.h  DWT.h  FDCT.h  FFST.h  HaarDWT.h  MCA.h  Shearlet.h  TextureRemoval.h
src/: CradleFunctions.cpp  DWT.cpp  FDCT.cpp  FDCT.h  FFST.h  HaarDWT.cpp  MCA.cpp  TextureRemoval.cpp  TextureRemoval.h  mainCradleRemoval.cpp  mainDemo.cpp  mainTextureRemoval.cpp
